tests/compilation_error/array_and_basic_variable_addition.ll
int[] x
x[] = 1

print x + 2
